--- a/crates/rnote-engine/Cargo.toml
+++ b/crates/rnote-engine/Cargo.toml
@@ -11,6 +11,9 @@ version.workspace = true
 [dependencies]
 rnote-compose = { workspace = true }
 
+reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }
+uuid = { version = "1.0", features = ["v4"] }
+
 anyhow = { workspace = true }
 approx = { workspace = true }
 base64 = { workspace = true }
